<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Group 1: General -->
    <group android:id="@+id/group_overview" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/admin_menu_home" />
        <item
            android:id="@+id/nav_user_flow"
            android:icon="@drawable/ic_visibility_24"
            android:title="@string/admin_menu_user_flow" />
    </group>

    <!-- Group 2: Management -->
    <group android:id="@+id/group_management" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reviews"
            android:icon="@drawable/ic_star_24"
            android:title="@string/admin_menu_reviews" />
        <item
            android:id="@+id/nav_stickers"
            android:icon="@drawable/ic_videocam_24"
            android:title="@string/admin_menu_stickers" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/ic_person_24"
            android:title="@string/admin_menu_users" />
    </group>


    <!-- Group 3: System -->
    <group android:id="@+id/group_system">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_login_24"
            android:title="@string/admin_menu_sign_out" />
    </group>

</menu>
